--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-hook-form": "^5.0.3",
     "react-router-dom": "^5.1.2",
@@ -37,6 +38,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bryjho/your-name-js-frameworks-ma3.js.git"
+    "url": "https://github.com/bryjho/bryan-villafuerte-js-frameworks-ma3.js.git"
   }
 }
